# code-formatter

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: content_formatter.rs  file_walker.rs  main.rs
src/content_formatter/: tests.rs
src/file_walker/: tests.rs
